# alien_ffi

./: Cargo.toml  Makefile  README.md  alien_ffi.opam  default.nix  flake.nix
src/: arena.ml  bench.ml  default.ml  dune  interface.ml
src/libalien_ffi_c/: Makefile  caml_ba.c  caml_custom.c  caml_raw_pointer.h  caml_values.c  dune
src/libalien_ffi_rs/: Cargo.toml  Makefile
src/libalien_ffi_rs/src/: caml_ba.rs  caml_ffi_types.rs  caml_opaque.rs  caml_values.rs  lib.rs
tests/: dune  simple.ml
