opam-version: "2.0"
version: "0.5"
maintainer: "et4te@0fx.io"
authors: ["Edward Tate"]
homepage: "https://github.com/zfxlabs/alien_ffi"
bug-reports: "https://github.com/zfxlabs/alien_ffi/issues"
dev-repo: "https://github.com/zfxlabs/alien_ffi.git"
license: "MIT"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
