[package]
name = "alien_ffi"
version = "0.1.0"
authors = [ "Edward Tate <edward.tate@nomadic-labs.com>" ]
description = "An FFI stub for OCaml."
repository = "https://gitlab.com/et4te/alien_ffi"
license = "MIT"

[lib]
crate-type = [ "rlib", "staticlib", "cdylib" ]

[dependencies]
libc = "0.2.0"
typed-arena = "2.0.1"
sha2 = "*"
