[package]
name = "libalien_ffi_rs"
version = "0.1.0"
authors = [ "Edward Tate <et4te@0fx.io>" ]
description = "An FFI stub for OCaml."
repository = "https://github.com/zfxlabs/alien_ffi"
license = "MIT"

[lib]
crate-type = [ "rlib", "staticlib", "cdylib" ]

[dependencies]
libc = "0.2.0"
typed-arena = "2.0.1"
sha2 = "*"
